[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hackingBuddyGPT"
authors = [
	{ name = "Andreas Happe", email = "andreas@offensive.one" }
]
maintainers = [
	{ name = "Andreas Happe", email = "andreas@offensive.one" },
	{ name = "Juergen Cito", email = "juergen.cito@tuwiena.c.at" }
]
description = "Helping Ethical Hackers use LLMs in 50 lines of code"
readme = "README.md"
keywords = ["hacking", "pen-testing", "LLM", "AI", "agent"]
requires-python = ">=3.10"
version = "0.3.1"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
]
dependencies = [
	'fabric == 3.2.2',
	'Mako == 1.3.2',
	'requests == 2.32.0',
	'rich == 13.7.1',
	'tiktoken == 0.8.0',
	'instructor == 1.3.5',
	'PyYAML == 6.0.1',
	'python-dotenv == 1.0.1',
	'pypsexec == 0.3.0',
	'pydantic == 2.8.2',
	'openai == 1.28.0',
	'BeautifulSoup4',
	'nltk'
]

[project.urls]
Homepage = "https://www.hackingbuddy.ai"
Documentation = "https://docs.hackingbuddy.ai"
Repository = "https://github.com/ipa-lab/hackingBuddyGPT"
"Bug Tracker" = "https://github.com/ipa-lab/hackingBuddyGPT/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hackingBuddyGPT.usecases.privesc.templates" = ["*.txt"]
"hackingBuddyGPT.usecases.examples" = ["*.txt"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
	"--import-mode=importlib",
]
[project.optional-dependencies]
testing = [
    'pytest',
    'pytest-mock'
]

[project.scripts]
wintermute = "hackingBuddyGPT.cli.wintermute:main"
hackingBuddyGPT = "hackingBuddyGPT.cli.wintermute:main"
